<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/edittext_uri"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="16dp"
        android:background="#BFE2F5"
        android:onClick="openWebsite"
        android:padding="8dp"
        android:text="@string/button_uri"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/edittext_loc"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:background="#BFE2F5"
        android:onClick="openLocation"
        android:padding="8dp"
        android:text="@string/button_loc"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/edittext_share"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:background="#BFE2F5"
        android:onClick="shareText"
        android:padding="8dp"
        android:text="@string/button_share"
        android:textAllCaps="false" />
</LinearLayout>
